--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
-.bodybg {
-    background: black;
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:200,400,700,800&display=swap");
 
+* {
+    padding: 0;
+    margin: 0;
+}
+
+body {
+    font-family: "Nunito Sans", sans-serif;
+    background: black;
 }
 
 .home {
